--- a/SandBox/connectML/connectML/Base.lproj/Main.storyboard
+++ b/SandBox/connectML/connectML/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -31,46 +32,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="Gn3-wG-KXe">
-                                <rect key="frame" x="56.5" y="134.5" width="301.5" height="352.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="qXF-tb-ad9">
+                                <rect key="frame" x="15" y="679" width="384" height="103"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="자신의 사진을 등록해주세요" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AYZ-N4-Ah6">
-                                        <rect key="frame" x="15.5" y="0.0" width="270.5" height="30"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="사진은 동물상을 판단하는 용도로만 쓰입니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dMo-Dv-z8X">
+                                        <rect key="frame" x="41.5" y="0.0" width="301.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="사진을 등록하시면 결과가 나옵니다." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hhf-1G-N7B">
+                                        <rect key="frame" x="73" y="40.5" width="238.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GGP-6o-NC0">
+                                        <rect key="frame" x="155" y="81" width="74" height="22"/>
+                                        <state key="normal" title="재측정" image="camera.badge.ellipsis" catalog="system">
+                                            <color key="titleColor" name="AccentColor"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="tappedRecheck:" destination="JFy-nF-hG3" eventType="touchUpInside" id="icX-DB-gpf"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Gn3-wG-KXe">
+                                <rect key="frame" x="75.5" y="325" width="263" height="254"/>
+                                <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="peN-kE-LzO">
-                                        <rect key="frame" x="19" y="54" width="263" height="254"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="263" height="254"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="263" id="0Cf-sS-XLg"/>
                                             <constraint firstAttribute="height" constant="254" id="g7b-8K-AGb"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="사진은 동물상을 판단하는 용도로만 쓰입니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dMo-Dv-z8X">
-                                        <rect key="frame" x="0.0" y="332" width="301.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="dMo-Dv-z8X" firstAttribute="top" secondItem="peN-kE-LzO" secondAttribute="bottom" constant="24" id="FBk-Tr-cue"/>
-                                    <constraint firstAttribute="trailing" secondItem="dMo-Dv-z8X" secondAttribute="trailing" id="MMd-bI-J6g"/>
-                                    <constraint firstItem="dMo-Dv-z8X" firstAttribute="leading" secondItem="Gn3-wG-KXe" secondAttribute="leading" id="YI4-b2-icr"/>
-                                </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GGP-6o-NC0">
-                                <rect key="frame" x="188" y="757" width="39" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="재측정"/>
-                                <connections>
-                                    <action selector="tappedRecheck:" destination="JFy-nF-hG3" eventType="touchUpInside" id="icX-DB-gpf"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="동물상" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hhf-1G-N7B">
-                                <rect key="frame" x="0.0" y="592" width="414" height="89"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="자신의 사진을 등록해주세요" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AYZ-N4-Ah6">
+                                <rect key="frame" x="72" y="174" width="270.5" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -78,12 +80,16 @@
                         <viewLayoutGuide key="safeArea" id="5Py-FR-dxZ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="5Py-FR-dxZ" firstAttribute="trailing" secondItem="Hhf-1G-N7B" secondAttribute="trailing" id="6DD-kG-Iwr"/>
-                            <constraint firstItem="Hhf-1G-N7B" firstAttribute="top" secondItem="Gn3-wG-KXe" secondAttribute="bottom" constant="173" id="En5-dL-hfW"/>
-                            <constraint firstItem="Gn3-wG-KXe" firstAttribute="centerY" secondItem="0iF-9o-CK3" secondAttribute="centerY" constant="-137.25" id="FLU-zH-2ci"/>
-                            <constraint firstItem="Hhf-1G-N7B" firstAttribute="leading" secondItem="5Py-FR-dxZ" secondAttribute="leading" id="Lqw-PI-rZk"/>
-                            <constraint firstItem="Gn3-wG-KXe" firstAttribute="centerX" secondItem="0iF-9o-CK3" secondAttribute="centerX" id="MSh-Co-o06"/>
-                            <constraint firstItem="5Py-FR-dxZ" firstAttribute="bottom" secondItem="Hhf-1G-N7B" secondAttribute="bottom" constant="50" id="eqA-x3-wu7"/>
+                            <constraint firstItem="AYZ-N4-Ah6" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="5Py-FR-dxZ" secondAttribute="leading" id="3So-E2-8bA"/>
+                            <constraint firstItem="AYZ-N4-Ah6" firstAttribute="top" secondItem="5Py-FR-dxZ" secondAttribute="top" constant="130" id="B0l-gh-lSv"/>
+                            <constraint firstItem="AYZ-N4-Ah6" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="5Py-FR-dxZ" secondAttribute="leading" id="Ijh-ZK-4Va"/>
+                            <constraint firstItem="5Py-FR-dxZ" firstAttribute="trailing" secondItem="qXF-tb-ad9" secondAttribute="trailing" constant="15" id="PGA-CQ-s0D"/>
+                            <constraint firstItem="qXF-tb-ad9" firstAttribute="leading" secondItem="5Py-FR-dxZ" secondAttribute="leading" constant="15" id="XvL-Bx-Nt9"/>
+                            <constraint firstItem="Gn3-wG-KXe" firstAttribute="centerX" secondItem="AYZ-N4-Ah6" secondAttribute="centerX" id="a3o-Ay-FgV"/>
+                            <constraint firstItem="qXF-tb-ad9" firstAttribute="top" secondItem="Gn3-wG-KXe" secondAttribute="bottom" constant="100" id="has-lH-1cw"/>
+                            <constraint firstItem="5Py-FR-dxZ" firstAttribute="bottom" secondItem="qXF-tb-ad9" secondAttribute="bottom" constant="80" id="oEp-YM-Qdd"/>
+                            <constraint firstItem="5Py-FR-dxZ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="AYZ-N4-Ah6" secondAttribute="trailing" id="vGE-cn-6XY"/>
+                            <constraint firstItem="AYZ-N4-Ah6" firstAttribute="centerX" secondItem="0iF-9o-CK3" secondAttribute="centerX" id="wEE-jb-FvR"/>
                         </constraints>
                     </view>
                     <connections>
@@ -98,6 +104,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="camera.badge.ellipsis" catalog="system" width="128" height="92"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
