--- a/Koting/Koting/Controller/MeetingList/MyMeetingList/Cell/FocusView.xib
+++ b/Koting/Koting/Controller/MeetingList/MyMeetingList/Cell/FocusView.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,7 +15,7 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FSJ-d9-eZ4">
                     <rect key="frame" x="0.0" y="132" width="380" height="2"/>
-                    <color key="backgroundColor" systemColor="systemTealColor"/>
+                    <color key="backgroundColor" red="0.53387361764907837" green="0.06793946772813797" blue="0.96206063032150269" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="2" id="otd-Eq-a7e"/>
                     </constraints>
@@ -33,9 +32,4 @@
             <point key="canvasLocation" x="131.19999999999999" y="-143.92803598200899"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemTealColor">
-            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
