--- a/Koting/Koting/View/MeetingListStoryboard.storyboard
+++ b/Koting/Koting/View/MeetingListStoryboard.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -21,7 +22,7 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyMeetingCell" rowHeight="134" id="tWu-Zi-j9R" customClass="MyMeetingCell" customModule="Koting" customModuleProvider="target">
-                                        <rect key="frame" x="16" y="49.5" width="288" height="134"/>
+                                        <rect key="frame" x="16" y="55.5" width="288" height="134"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tWu-Zi-j9R" id="Y3n-Ii-Y3T">
                                             <rect key="frame" x="0.0" y="0.0" width="288" height="134"/>
@@ -30,6 +31,21 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pll-AO-NiL">
                                                     <rect key="frame" x="8" y="11" width="271" height="112.5"/>
                                                     <subviews>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ZF-W7-lfd">
+                                                            <rect key="frame" x="0.0" y="0.0" width="271" height="112.5"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="112.5" id="ctt-cX-LwS"/>
+                                                                <constraint firstAttribute="width" constant="271" id="dx8-bN-BWL"/>
+                                                            </constraints>
+                                                            <color key="tintColor" red="0.53387361764907837" green="0.06793946772813797" blue="0.96206063032150269" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <state key="normal">
+                                                                <imageReference key="image" image="plus" catalog="system" symbolScale="large"/>
+                                                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="35" weight="regular"/>
+                                                            </state>
+                                                            <connections>
+                                                                <action selector="noMyMeetingBtnTapped:" destination="tWu-Zi-j9R" eventType="touchUpInside" id="Pcw-fW-QIW"/>
+                                                            </connections>
+                                                        </button>
                                                         <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="2MQ-X3-mWO">
                                                             <rect key="frame" x="3" y="16" width="264" height="80"/>
                                                             <subviews>
@@ -68,7 +84,11 @@
                                                         <constraint firstAttribute="trailing" secondItem="2MQ-X3-mWO" secondAttribute="trailing" constant="4" id="1yU-Fv-McM"/>
                                                         <constraint firstItem="2MQ-X3-mWO" firstAttribute="top" secondItem="pll-AO-NiL" secondAttribute="top" constant="16" id="GPT-Yw-zo6"/>
                                                         <constraint firstItem="2MQ-X3-mWO" firstAttribute="leading" secondItem="pll-AO-NiL" secondAttribute="leading" constant="3" id="Lil-d5-CD7"/>
+                                                        <constraint firstAttribute="bottom" secondItem="7ZF-W7-lfd" secondAttribute="bottom" id="OGN-eO-Rc9"/>
+                                                        <constraint firstItem="7ZF-W7-lfd" firstAttribute="top" secondItem="pll-AO-NiL" secondAttribute="top" id="gNF-iL-Cvo"/>
+                                                        <constraint firstAttribute="trailing" secondItem="7ZF-W7-lfd" secondAttribute="trailing" id="gXc-bw-EWi"/>
                                                         <constraint firstAttribute="bottom" secondItem="2MQ-X3-mWO" secondAttribute="bottom" constant="16.5" id="hEK-Ws-blc"/>
+                                                        <constraint firstItem="7ZF-W7-lfd" firstAttribute="leading" secondItem="pll-AO-NiL" secondAttribute="leading" id="kYB-Ua-Xkr"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -82,12 +102,14 @@
                                         <connections>
                                             <outlet property="animalShapeImage" destination="u2q-gc-OFH" id="c3B-8g-U6a"/>
                                             <outlet property="collegeName" destination="MW7-K9-TJE" id="ZAx-Hi-NcR"/>
+                                            <outlet property="myMeetingStackView" destination="2MQ-X3-mWO" id="ZOO-hS-5ah"/>
+                                            <outlet property="noMyMeeting" destination="7ZF-W7-lfd" id="BYD-oL-P9A"/>
                                             <outlet property="numberOfParticipants" destination="HGQ-VL-JJo" id="zqI-wE-0de"/>
                                             <outlet property="tableViewCellLayer" destination="pll-AO-NiL" id="Oz7-2g-Yuv"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MeetingListTableViewCell" rowHeight="134.5" id="hdB-I3-qr9" customClass="MeetingListTableViewCell" customModule="Koting" customModuleProvider="target">
-                                        <rect key="frame" x="16" y="183.5" width="288" height="134.5"/>
+                                        <rect key="frame" x="16" y="189.5" width="288" height="134.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hdB-I3-qr9" id="49W-Rs-UEp">
                                             <rect key="frame" x="0.0" y="0.0" width="288" height="134.5"/>
@@ -332,11 +354,11 @@
         <scene sceneID="Crq-gh-ayu">
             <objects>
                 <viewController id="KP4-dU-TG8" customClass="MeetingDetailInfoViewController" customModule="Koting" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="bLL-zb-XDf">
+                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="bLL-zb-XDf">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0NW-UG-3rt" customClass="CustomButton" customModule="Koting" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0NW-UG-3rt" customClass="CustomButton" customModule="Koting" customModuleProvider="target">
                                 <rect key="frame" x="70" y="552" width="180" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="ZhE-vc-MtX"/>
@@ -357,7 +379,6 @@
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="Bdw-4S-OQL"/>
                                             <constraint firstAttribute="height" constant="100" id="XGH-HH-vHL"/>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="fuO-yJ-bsk"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="강아지상" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4nq-4C-Ggl">
@@ -371,7 +392,7 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vxF-n5-DDY">
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vxF-n5-DDY">
                                 <rect key="frame" x="5" y="202" width="310" height="310"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="VL8-g7-wP0">
@@ -663,6 +684,7 @@
         <image name="house" catalog="system" width="128" height="106"/>
         <image name="house.fill" catalog="system" width="128" height="106"/>
         <image name="list.star" catalog="system" width="128" height="94"/>
+        <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
